--- a/infromasi.html
+++ b/infromasi.html
@@ -60,7 +60,7 @@
                                     <div class="p-6 flex-grow">
                                         <span class="text-xs text-yellow-600 font-semibold">AKADEMIK</span>
                                         <h3 class="text-md font-bold mt-2 mb-3 text-gray-800">Libur Semester Ganjil T.A 2024/2025</h3>
-                                        <p class="text-gray-600 text-sm">Diberitahukan kepada seluruh siswa bahwa libur semester ganjil akan dimulai pada tanggal...</p>
+                                        <p class="text-gray-600 text-sm line-clamp-2">Diberitahukan kepada seluruh siswa bahwa libur semester ganjil akan dimulai pada tanggal...</p>
                                     </div>
                                 </div>
                             </div>
@@ -72,7 +72,7 @@
                                     <div class="p-6 flex-grow">
                                         <span class="text-xs text-yellow-600 font-semibold">KEGIATAN</span>
                                         <h3 class="text-md font-bold mt-2 mb-3 text-gray-800">Perayaan Hari Kemerdekaan RI</h3>
-                                        <p class="text-gray-600 text-sm">Sekolah akan mengadakan serangkaian lomba untuk memperingati HUT Kemerdekaan RI...</p>
+                                        <p class="text-gray-600 text-sm line-clamp-2">Sekolah akan mengadakan serangkaian lomba untuk memperingati HUT Kemerdekaan RI...</p>
                                     </div>
                                 </div>
                             </div>
@@ -84,7 +84,7 @@
                                     <div class="p-6 flex-grow">
                                         <span class="text-xs text-yellow-600 font-semibold">PRESTASI</span>
                                         <h3 class="text-md font-bold mt-2 mb-3 text-gray-800">Selamat! Tim Olimpiade Sains Juara 1</h3>
-                                        <p class="text-gray-600 text-sm">Tim Olimpiade Sains IQIS berhasil meraih juara 1 di tingkat provinsi. Selamat kepada...</p>
+                                        <p class="text-gray-600 text-sm line-clamp-2">Tim Olimpiade Sains IQIS berhasil meraih juara 1 di tingkat provinsi. Selamat kepada...</p>
                                     </div>
                                 </div>
                             </div>
@@ -96,7 +96,7 @@
                                     <div class="p-6 flex-grow">
                                         <span class="text-xs text-yellow-600 font-semibold">PPDB</span>
                                         <h3 class="text-md font-bold mt-2 mb-3 text-gray-800">Pembukaan Penerimaan Siswa Baru</h3>
-                                        <p class="text-gray-600 text-sm">Pendaftaran siswa baru untuk tahun ajaran 2025/2026 telah dibuka. Segera daftarkan...</p>
+                                        <p class="text-gray-600 text-sm line-clamp-2">Pendaftaran siswa baru untuk tahun ajaran 2025/2026 telah dibuka. Segera daftarkan...</p>
                                     </div>
                                 </div>
                             </div>
@@ -271,7 +271,7 @@
                 </a>
 
                 <!-- Program -->
-                <a href="" aria-label="Program" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
+                <a href="program.html" aria-label="Program" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
                     <i class="fas fa-book-open text-[18px]"></i>
                     <span class="mt-2">Program</span>
                 </a>
