--- a/program.html
+++ b/program.html
@@ -16,14 +16,6 @@
         body {
             font-family: "Inter", sans-serif;
         }
-
-        section::-webkit-scrollbar {
-            display: none;
-        }
-        section {
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-        }
         </style>
     </head>
     <body class="bg-[#F2F2F2] m-0 p-0">
@@ -90,7 +82,7 @@
                 <!-- Informasi -->
                 <a href="infromasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
                     <i class="fas fa-clipboard-list text-[18px]"></i>
-                    <span class="mt-2">Artikel</span>
+                    <span class="mt-2">Informasi</span>
                 </a>
 
                 <!-- Program -->
