--- a/profil.html
+++ b/profil.html
@@ -14,10 +14,9 @@
     </head>
     <body class="bg-[#F2F2F2] m-0 p-0">
         <main class="max-w-2xl mx-auto mt-4 px-4 sm:px-6 md:px-8 pt-4">
-
         <!-- Pengenalan Sekolah -->
         <section>
-            <h2 class="text-2xl font-bold mb-4 text-center">Tentang Kami</h2>
+            <h2 class="text-3xl font-bold mb-6 text-center">Tentang <span class="bg-gradient-to-r from-green-600 to-green-800 bg-clip-text text-transparent">Kami</span></h2>
             <p class="text-gray-700 leading-relaxed text-justify">
                 Ibnul Qayyim Islamic School - IQIS adalah Sekolah Islam yang diselenggarakan dengan memadukan secara Integratif nilai dan ajaran Islam dalam bangunan kurikulum dengan pendekatan pembelajaran yang efektif dan pelibatan yang optimal dan koperatif antara guru dan orangtua, serta masyarakat untuk membina karakter dan kompetensi peserta didik. Berbekal niat yang ikhlas untuk memperbaiki generasi muda kaum muslimin di masa yang akan datang. Maka didirikanlah Ibnul Qayyim Islamic School pada tahun 2011 (SDIT) dengan mengusung konsep sekolah yang memiliki keunggulan pada ilmu keislaman ditambah tahfidzul qur'an dan bahasa asing (Arab & inggris) dengan tetap mengacu pada kurikulum yang di tetapkan pemerintah.
             </p>
@@ -38,8 +37,13 @@
         <!-- Tabs untuk Visi Misi dan Akreditasi -->
         <section class="mt-8">
             <div class="max-w-4xl mx-auto">
+                <div class="text-center mb-6">
+                    <h2 class="text-3xl font-bold text-gray-800">
+                        Jenjang <span class="bg-gradient-to-r from-green-600 to-green-800 bg-clip-text text-transparent">Sekolah</span>
+                    </h2>
+                </div>
                 <!-- Tab Navigation -->
-                <div class="flex justify-center mb-6">
+                <div class="flex justify-center mb-8">
                     <div class="bg-white rounded-full shadow-md p-1 flex flex-wrap justify-center max-w-lg">
                         <button onclick="switchTab('kbit')" class="tab-btn px-4 py-2 rounded-full bg-green-600 text-white font-semibold text-xs transition-all duration-300" data-tab="kbit">
                             KBIT
