update: size font

--- a/profil.html
+++ b/profil.html
@@ -17,7 +17,7 @@
         <!-- Pengenalan Sekolah -->
         <section>
             <h2 class="text-2xl font-bold mb-6 text-center">Tentang <span class="bg-gradient-to-r from-green-600 to-green-800 bg-clip-text text-transparent">Kami</span></h2>
-            <p class="text-gray-700 leading-relaxed text-justify">
+            <p class="text-gray-700 leading-relaxed text-justify text-sm">
                 Ibnul Qayyim Islamic School - IQIS adalah Sekolah Islam yang diselenggarakan dengan memadukan secara Integratif nilai dan ajaran Islam dalam bangunan kurikulum dengan pendekatan pembelajaran yang efektif dan pelibatan yang optimal dan koperatif antara guru dan orangtua, serta masyarakat untuk membina karakter dan kompetensi peserta didik. Berbekal niat yang ikhlas untuk memperbaiki generasi muda kaum muslimin di masa yang akan datang. Maka didirikanlah Ibnul Qayyim Islamic School pada tahun 2011 (SDIT) dengan mengusung konsep sekolah yang memiliki keunggulan pada ilmu keislaman ditambah tahfidzul qur'an dan bahasa asing (Arab & inggris) dengan tetap mengacu pada kurikulum yang di tetapkan pemerintah.
             </p>
         </section>
@@ -72,13 +72,13 @@
                             <div class="mb-12">
                                 <div class="flex items-start space-x-4">
                                     <div class="flex-shrink-0">
-                                        <div class="w-14 h-14 bg-pink-100 rounded-full flex items-center justify-center">
-                                            <i class="fas fa-bullseye text-[24px] text-pink-600"></i>
+                                        <div class="w-14 h-14 bg-cyan-100 rounded-full flex items-center justify-center">
+                                            <i class="fas fa-bullseye text-[24px] text-cyan-600"></i>
                                         </div>
                                     </div>
                                     <div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Visi</h3>
-                                        <p class="text-gray-600 leading-relaxed">
+                                        <p class="text-gray-600 leading-relaxed text-sm">
                                             Menjadi lembaga pendidikan Islam terbaik yang menghasilkan generasi saleh, cerdas, dan mandiri sejak dini
                                         </p>
                                     </div>
@@ -89,32 +89,32 @@
                             <div>
                                 <div class="flex items-start space-x-4">
                                     <div class="flex-shrink-0">
-                                        <div class="w-14 h-14 bg-pink-100 rounded-full flex items-center justify-center">
-                                            <i class="fas fa-rocket text-[24px] text-pink-600"></i>
+                                        <div class="w-14 h-14 bg-cyan-100 rounded-full flex items-center justify-center">
+                                            <i class="fas fa-rocket text-[24px] text-cyan-600"></i>
                                         </div>
                                     </div>
 
                                     <div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Misi</h3>
-                                        <ul class="text-gray-600 leading-relaxed space-y-2">
+                                        <ul class="text-gray-600 leading-relaxed space-y-2 text-sm">
                                             <li class="flex items-start">
-                                                <span class="text-pink-500 mr-2 mt-1">▸</span>
+                                                <span class="text-cyan-500 mr-2 mt-1">▸</span>
                                                 <span>Menanamkan nilai-nilai keislaman sejak dini melalui pembiasaan dan keteladanan.</span>
                                             </li>
                                             <li class="flex items-start">
-                                                <span class="text-pink-500 mr-2 mt-1">▸</span>
+                                                <span class="text-cyan-500 mr-2 mt-1">▸</span>
                                                 <span>Mengembangkan potensi anak melalui kegiatan bermain yang edukatif dan menyenangkan.</span>
                                             </li>
                                             <li class="flex items-start">
-                                                <span class="text-pink-500 mr-2 mt-1">▸</span>
+                                                <span class="text-cyan-500 mr-2 mt-1">▸</span>
                                                 <span>Membentuk karakter anak yang mandiri, percaya diri, dan bertanggung jawab.</span>
                                             </li>
                                             <li class="flex items-start">
-                                                <span class="text-pink-500 mr-2 mt-1">▸</span>
+                                                <span class="text-cyan-500 mr-2 mt-1">▸</span>
                                                 <span>Mengenalkan huruf hijaiyah dan dasar-dasar Al-Qur'an dengan metode yang menyenangkan.</span>
                                             </li>
                                             <li class="flex items-start">
-                                                <span class="text-pink-500 mr-2 mt-1">▸</span>
+                                                <span class="text-cyan-500 mr-2 mt-1">▸</span>
                                                 <span>Membangun kerjasama yang harmonis antara sekolah dan orang tua untuk perkembangan anak.</span>
                                             </li>
                                         </ul>
@@ -129,8 +129,8 @@
                         <h2 class="text-xl font-semibold mb-8 text-gray-800"><i class="fas fa-award mr-4 text-indigo-500"></i>Akreditasi</h2>
                         
                         <!-- Akreditasi -->
-                        <div class="bg-pink-50 border-l-4 border-pink-500 p-4 mb-12 rounded">
-                            <h3 class="text-lg font-semibold mb-2 text-pink-800">Akreditasi A</h3>
+                        <div class="bg-cyan-50 border-l-4 border-cyan-500 p-4 mb-12 rounded">
+                            <h3 class="text-lg font-semibold mb-2 text-cyan-800">Akreditasi A</h3>
                             <p class="text-gray-700 text-sm">Kami bangga menyandang predikat <strong>Akreditasi "A"</strong> dari Badan Akreditasi Nasional PAUD dan Pendidikan Anak Usia Dini (BAN PAUD dan PNF). Ini adalah bukti komitmen kami dalam memberikan standar pendidikan tertinggi.</p>
                         </div>
 
@@ -141,32 +141,32 @@
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Juara 1 Lomba Mewarnai Tingkat Kota</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2023</p>
+                                        <h4 class="font-semibold text-sm mb-1">Juara 1 Lomba Mewarnai Tingkat Kota</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2023</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Juara 2 Lomba Menari Tingkat Provinsi</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2022</p>
+                                        <h4 class="font-semibold text-sm mb-1">Juara 2 Lomba Menari Tingkat Provinsi</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2022</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Best Performance dalam Pentas Seni Anak</h4>
-                                        <p class="text-sm text-gray-600">Tahun 2023</p>
+                                        <h4 class="font-semibold text-sm mb-1">Best Performance dalam Pentas Seni Anak</h4>
+                                        <p class="text-xs text-gray-600">Tahun 2023</p>
                                     </div>
                                 </div>
 
                                 <div class="flex items-start space-x-3">
                                     <i class="fas fa-medal text-yellow-300 mt-1"></i>
                                     <div>
-                                        <h4 class="font-semibold">Sekolah Adiwiyata Tingkat Kota</h4>
-                                        <p class="text-sm text-gray-600">Penghargaan atas kepedulian lingkungan</p>
+                                        <h4 class="font-semibold text-sm mb-1">Sekolah Adiwiyata Tingkat Kota</h4>
+                                        <p class="text-xs text-gray-600">Penghargaan atas kepedulian lingkungan</p>
                                     </div>
                                 </div>
                             </div>
@@ -189,7 +189,7 @@
                                     </div>
                                     <div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Visi</h3>
-                                        <p class="text-gray-600 leading-relaxed">
+                                        <p class="text-gray-600 leading-relaxed text-sm">
                                             Mewujudkan peserta didik yang beriman, berakhlak mulia, berpikir kritis, mandiri dan bahagia.
                                         </p>
                                     </div>
@@ -207,7 +207,7 @@
 
                                     <div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Misi</h3>
-                                        <ul class="text-gray-600 leading-relaxed space-y-2">
+                                        <ul class="text-gray-600 leading-relaxed space-y-2 text-sm">
                                             <li class="flex items-start">
                                                 <span class="text-pink-500 mr-2 mt-1">▸</span>
                                                 <span>Mendidik siswa senantiasa bertaqwa kepada Allah Subhanahu Wa Ta’ala dan berbakti kepada kedua orang tua dengan cara yang ma’ruf sesuai tuntunan Rasulullah Shallallahu Alaihi Wassalam.</span>
@@ -308,7 +308,7 @@
                                     </div>
                                     <div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Visi</h3>
-                                        <p class="text-gray-600 leading-relaxed">
+                                        <p class="text-gray-600 leading-relaxed text-sm">
                                             Mencetak generasi muslim yang shalih, hafidz, dan terampil.
                                         </p>
                                     </div>
@@ -326,7 +326,7 @@
 
                                     <div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Misi</h3>
-                                        <ul class="text-gray-600 leading-relaxed space-y-2">
+                                        <ul class="text-gray-600 leading-relaxed space-y-2 text-sm">
                                             <li class="flex items-start">
                                                 <span class="text-red-500 mr-2 mt-1">▸</span>
                                                 <span>Mendidik peserta didik hingga memiliki akhlak mulia sebagaimana akhlak Rasulullah Shallahu’ Alaihi Wassalam.</span>
@@ -415,7 +415,7 @@
                                     </div>
                                     <div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Visi</h3>
-                                        <p class="text-gray-600 leading-relaxed">
+                                        <p class="text-gray-600 leading-relaxed text-sm">
                                             Membentuk Generasi Rabbani yang Berakhlak Mulia, Unggul dalam Ilmu Pengetahuan dan Teknologi, Fasih Berkomunikasi Global, Berlandaskan Akidah Ahlussunnah wal Jama'ah.
                                         </p>
                                     </div>
@@ -433,7 +433,7 @@
 
                                     <div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Misi</h3>
-                                        <ul class="text-gray-600 leading-relaxed space-y-2">
+                                        <ul class="text-gray-600 leading-relaxed space-y-2 text-sm">
                                             <li class="flex items-start">
                                                 <span class="text-blue-500 mr-2 mt-1">▸</span>
                                                 <span>Mendidik siswa dengan nilai-nilai Islam yang komprehensif, meliputi akidah,ibadah, akhlak, dan muamalah, sehingga terbentuk pribadi yang shalih dan berakhlak mulia.</span>
@@ -526,7 +526,7 @@
                                     </div>
                                     <div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Visi</h3>
-                                        <p class="text-gray-600 leading-relaxed">
+                                        <p class="text-gray-600 leading-relaxed text-sm">
                                             Mencetak generasi muslim yang shalih, hafidz, dan terampil.
                                         </p>
                                     </div>
@@ -544,7 +544,7 @@
 
                                     <div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Misi</h3>
-                                        <ul class="text-gray-600 leading-relaxed space-y-2">
+                                        <ul class="text-gray-600 leading-relaxed space-y-2 text-sm">
                                             <li class="flex items-start">
                                                 <span class="text-gray-500 mr-2 mt-1">▸</span>
                                                 <span>Mendidik siswa dengan nilai-nilai Islam yang komprehensif, meliputi akidah,ibadah, akhlak, dan muamalah, sehingga terbentuk pribadi yang shalih dan berakhlak mulia.</span>
