update: rasio image 1:1

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <a href="#"
             target="_blank"
             class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow-lg group"
-            style="background-image: url('img/iqis2.jpg'); background-size: cover; background-position: center;">
+            style="background-image: url('img/buroq.jpeg'); background-size: cover; background-position: center;">
             <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition duration-300"></div> 
             <div class="relative z-10 flex flex-col items-center p-2">
               <!-- Logo Container dengan Blur dan Hover Effect -->
@@ -261,55 +261,57 @@
           <div class="flex flex-col space-y-4 px-2 sm:px-0">
             
             <!-- Artikel 1 -->
-            <a href="/artikel/misi-sekolah-kami"
+            <a href="/artikel/penghargaan-siswa" 
               class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
-              <div class="w-40 aspect-[1/1] overflow-hidden rounded-l-lg">
+              <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
                   <img src="img/iqis5.jpg"
-                      alt="Misi Sekolah Kami"
+                      alt="Penghargaan Terbaik diraih oleh Siswa"
                       class="w-full h-full object-cover" />
               </div>
 
               <div class="p-4 flex flex-col justify-center flex-grow">
-                <h3 class="font-semibold text-gray-900 text-base leading-tight">Penghargaan Terbaik diraih oleh Siswa</h3>
-                <p class="text-[12px] text-gray-400 mt-1">Ibnul Qayyim Islamic School</p>
-                <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-2">
+                <h3 class="font-semibold text-gray-900 text-sm leading-tight line-clamp-1">Penghargaan Terbaik diraih oleh Siswa</h3>
+                <p class="text-xs text-gray-400 mt-2">Ibnul Qayyim Islamic School</p>
+                <p class="text-xs text-gray-600 mt-2 leading-snug line-clamp-2">
                   Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
                 </p>
               </div>
             </a>
 
-            <a href="/artikel/misi-sekolah-kami"
+            <!-- Artikel 2 -->
+            <a href="/artikel/kegiatan-outing-gowa" 
               class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
-              <div class="w-40 aspect-[1/1] overflow-hidden rounded-l-lg">
+              <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
                   <img src="img/iqis4.jpg"
-                      alt="Misi Sekolah Kami"
+                      alt="Kegiatan Outing di Gowa"
                       class="w-full h-full object-cover" />
               </div>
 
               <div class="p-4 flex flex-col justify-center flex-grow">
-                <h3 class="font-semibold text-gray-900 text-base leading-tight">Kegiatan Outing di Gowa</h3>
-                <p class="text-[12px] text-gray-400 mt-1">Ibnul Qayyim Islamic School</p>
-                <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-2">
+                <h3 class="font-semibold text-gray-900 text-sm leading-tight line-clamp-1">Kegiatan Outing di Gowa</h3>
+                <p class="text-xs text-gray-400 mt-2">Ibnul Qayyim Islamic School</p>
+                <p class="text-xs text-gray-600 mt-2 leading-snug line-clamp-2">
                   Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
                 </p>
               </div>
             </a>
 
-            <a href="/artikel/misi-sekolah-kami"
+            <!-- Artikel 3 -->
+            <a href="/artikel/upacara-bendera-2025" 
               class="w-full flex flex-row bg-white shadow-sm hover:shadow-md rounded-lg transition duration-300 overflow-hidden">
 
-              <div class="w-40 aspect-[1/1] overflow-hidden rounded-l-lg">
+              <div class="w-32 aspect-[1/1] overflow-hidden rounded-l-lg flex-shrink-0">
                   <img src="img/iqis2.jpg"
-                      alt="Misi Sekolah Kami"
+                      alt="Upacara Bendera Merah Putih 17 Agustus 2025"
                       class="w-full h-full object-cover" />
               </div>
 
               <div class="p-4 flex flex-col justify-center flex-grow">
-                <h3 class="font-semibold text-gray-900 text-base leading-tight">Upacara Bendera Merah Putih 17 Agustus 2025</h4>
-                <p class="text-[12px] text-gray-400 mt-1">Ibnul Qayyim Islamic School</p>
-                <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-2">
+                <h3 class="font-semibold text-gray-900 text-sm leading-tight line-clamp-1">Upacara Bendera Merah Putih 17 Agustus 2025</h3>
+                <p class="text-xs text-gray-400 mt-2">Ibnul Qayyim Islamic School</p>
+                <p class="text-xs text-gray-600 mt-2 leading-snug line-clamp-2">
                   Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital ...
                 </p>
               </div>
